--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "qcod/laravel-app-settings": "^1.5",
         "spatie/laravel-backup": "^6.16",
         "spatie/laravel-permission": "^5.5",
